# unitree-project

./: .gitignore  MID360_config.json  README.md  g1  g1_map5.pgm  g1_map6.pgm  g1_slam_map.pgm  g1_slam_map2.pgm  g1_slam_map3.pgm  g1_wander.py  g1_wander_v2.py  init_lidar.py  main.py  pyproject.toml  start_robot.sh
g1_nav_ws/: cyclonedds.xml  setup_ws.sh
g1_nav_ws/src/: unitree_api  unitree_go  unitree_hg
g1_nav_ws/src/g1_autonomy_pkg/: package.xml  setup.cfg  setup.py
g1_nav_ws/src/g1_autonomy_pkg/config/: g1_nav.rviz  mapper_params_online_async.yaml  nav2_params.yaml
g1_nav_ws/src/g1_autonomy_pkg/g1_autonomy_pkg/: g1_tf_bridge.py
g1_nav_ws/src/g1_autonomy_pkg/launch/: g1_autonomy.launch.py  slam.launch.py
g1_nav_ws/src/unitree_ros2/cyclonedds_ws/src/unitree/unitree_api/: CMakeLists.txt
g1_nav_ws/src/unitree_ros2/cyclonedds_ws/src/unitree/unitree_go/: CMakeLists.txt
g1_nav_ws/src/unitree_ros2/cyclonedds_ws/src/unitree/unitree_hg/: CMakeLists.txt
